--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ output:
 
 4GlobalSustainability -> Global Sustainability 4.0 
 
-# View
+# Vision
 
 4GlobalSustainability aims to be an open Network of Institutions (formal and non-formal), Companies and Professionals with different interests (environmental, social, economic, environmental, technological, strategic) around sustainability and issues of digital transformation and industry 4.0 on a scale Global.
 
