--- a/comunidad.Rmd
+++ b/comunidad.Rmd
@@ -25,7 +25,7 @@ output:
 ## Professionals and people
 |Equipo|
 |---|---|---|---|
-|![](image/gustavo-150.png)|**Phd (c) M.Sc. Gustavo Godoy U.**, School of Sciences and Technologies. Department of Geodetic and Geomatics Sciences. University of Concepción Campus Los Angeless|![]()|
+|![](image/gustavo-150.png)|**M.Sc. Gustavo Godoy U.**, School of Sciences and Technologies. Department of Geodetic and Geomatics Sciences. University of Concepción Campus Los Angeless|![]()|
 
 
 
