--- a/temas.Rmd
+++ b/temas.Rmd
@@ -33,3 +33,5 @@ Take a minute to identify where to ask your question, this will have a positive 
 
 This classification is based on the Knowledge Meta-Network for Decisions and Strategies of the MIT Global System for Sustainable Development. GSSD is an evolving knowledge network system dedicated to sustainable development. Designed to help identify and scale up innovative approaches to sustainability - including enabling, policy and strategic technologies, tracking various aspects of emerging challenges, problems and solutions to date. [Source](https://gssd.mit.edu/what-gssd)
 
+Your questions will be taken as the basis for planning activities, workshops, webinars where questions and concerns about the knowledge model will be discussed.
+
