--- a/actividades.Rmd
+++ b/actividades.Rmd
@@ -9,17 +9,13 @@ output:
     smooth_scroll: true
 ---
 
+4GlobalSustainability is an active community that shares data, information, knowledge and experiences related to sustainability
+
 # Webinars
-coming soon
+## 20210803 15:00 webinar sustainability 4.0 
+The webinar will be based on the questions to the GSSD knowledge model. The questions will be collected in the topics section, during the month of May and June until Tuesday, June 15, 2021.  
 
-# Workshops
-coming soon
 
-# Trainings
-coming soon
 
-# Projects
-## OCRE - Regional School Scientific Observatory 
-The Scientific School Observatory is an initiative of teachers from different higher education establishments (Universidad de Concepción, Universidad de la Serena, Universidad Adventista currently [04-28-2021]) in Chile, committed and aligned with development and decentralization processes in the region and the country, seeking with interest the free development of individuals, especially the high school community, where teachers and students elaborate part of the foundation of our society. At the same time that we build preventive actions against environmental and social problems, we are facing the challenges in the network.[Visit site](https://observatoriocientifico.github.io/)
 
 
